Added header of STL3GD20

--- a/gyro-stm32f7/gyro-stm32f7.ioc
+++ b/gyro-stm32f7/gyro-stm32f7.ioc
@@ -1,36 +1,36 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion
-ADC1.NbrOfConversion=1
+ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC1.IPParameters=Rank-3\#ChannelRegularConversion,master,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
-ADC1.Rank-1\#ChannelRegularConversion=1
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.Rank-3\#ChannelRegularConversion=1
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
 File.Version=6
+I2C1.IPParameters=Timing
+I2C1.Timing=0x20303E5D
 KeepUserPlacement=true
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
 Mcu.IP2=GFXSIMULATOR
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SPI1
+Mcu.IP3=I2C1
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
 Mcu.IP6=SYS
 Mcu.IP7=TIM7
 Mcu.IP8=USART3
 Mcu.IPNb=9
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
-Mcu.Pin0=PA2
-Mcu.Pin1=PA5
-Mcu.Pin2=PA6
-Mcu.Pin3=PA7
-Mcu.Pin4=PB10
-Mcu.Pin5=PB11
-Mcu.Pin6=PB7
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.Pin8=VP_TIM7_VS_ClockSourceINT
-Mcu.PinsNb=9
+Mcu.Pin0=PA3
+Mcu.Pin1=PB10
+Mcu.Pin2=PB11
+Mcu.Pin3=PB6
+Mcu.Pin4=PB7
+Mcu.Pin5=PB9
+Mcu.Pin6=VP_SYS_VS_Systick
+Mcu.Pin7=VP_TIM7_VS_ClockSourceINT
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -48,23 +48,21 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-PA2.Signal=ADCx_IN2
-PA5.Mode=Full_Duplex_Master
-PA5.Signal=SPI1_SCK
-PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI1_MISO
-PA7.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
+PA3.Signal=ADCx_IN3
 PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
 PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
 PB7.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
 PB7.GPIO_Label=LED
 PB7.GPIO_PuPd=GPIO_NOPULL
 PB7.Locked=true
 PB7.PinState=GPIO_PIN_RESET
 PB7.Signal=GPIO_Output
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PCC.Checker=false
 PCC.Line=STM32F7x7
 PCC.MCU=STM32F767ZITx
@@ -100,7 +98,7 @@ ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_TIM7_Init-TIM7-false-HAL-true,7-MX_GFXSIMULATOR_Init-GFXSIMULATOR-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_TIM7_Init-TIM7-false-HAL-true,7-MX_GFXSIMULATOR_Init-GFXSIMULATOR-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -188,18 +186,10 @@ RCC.VCOOutputFreq_Value=192000000
 RCC.VCOSAIOutputFreq_Value=384000000
 RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
-SH.ADCx_IN2.0=ADC1_IN2,IN2
-SH.ADCx_IN2.ConfNb=1
-SPI1.CLKPhase=SPI_PHASE_2EDGE
-SPI1.CLKPolarity=SPI_POLARITY_HIGH
-SPI1.CalculateBaudRate=48.0 MBits/s
-SPI1.DataSize=SPI_DATASIZE_8BIT
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,CLKPolarity,CLKPhase
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
+SH.ADCx_IN3.0=ADC1_IN3,IN3
+SH.ADCx_IN3.ConfNb=1
 TIM7.IPParameters=Prescaler,Period
-TIM7.Period=10000
+TIM7.Period=1000
 TIM7.Prescaler=9599
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
