--- a/gyro-stm32f7/gyro-stm32f7.ioc
+++ b/gyro-stm32f7/gyro-stm32f7.ioc
@@ -6,7 +6,8 @@ ADC1.Rank-3\#ChannelRegularConversion=1
 ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
 File.Version=6
-I2C1.IPParameters=Timing
+I2C1.Analog_Filter=I2C_ANALOGFILTER_ENABLE
+I2C1.IPParameters=Timing,Analog_Filter
 I2C1.Timing=0x20303E5D
 KeepUserPlacement=true
 Mcu.Family=STM32F7
